# spatch

./: .gitignore  CMakeLists.txt  Makefile  README.md  unit_tests.bash
config/spatch/: config.ini
documents/: technical_documentation.md  user_documentation.md
documents/diagrams/: software_diagram.class.yuml.txt
documents/user_documentation/: compilation_and_packaging.md  package_installation_and_configuration.md
libssh_examples/sample_ssh_client/: main.c
libssh_examples/sample_ssh_server/: CMakeLists.txt
packaging/: build.sh  install  postinst
sample_test_code/sample_ssh_client/: Makefile
source/: AccessListController.cpp  AccessListController.hpp  ConfigurationController.cpp  ConfigurationController.hpp  ConfigurationReader.cpp  ConfigurationReader.hpp  Endpoint.cpp  Endpoint.hpp  ServerConfiguration.cpp  ServerConfiguration.hpp  ServerController.cpp  ServerController.hpp  SshChannel.cpp  SshChannel.hpp  SshClient.cpp  SshClient.hpp  SshProxy.cpp  SshProxy.hpp  SshSession.cpp  SshSession.hpp  User.cpp  User.hpp  main.cpp
